--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=thesisMgr
 DB_USERNAME=root
-DB_PASSWORD=26031812
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
