--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravelcollective/html": "^5.2.0",
         "maatwebsite/excel": "~2.1.0",
         "phpoffice/phpword": "^0.13.0",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "roumen/sitemap": "^2.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
